src/backpack/backpack.css
.backpack-main {
    display: flex;
    flex-direction: row;
    /* justify-content: right; */
}

.shelves {
    flex: 1 200px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-auto-rows: 200px;
    grid-gap: 1em;
    margin: 2.5em;
}

.item {
    padding: 0.2em;
}

